# ucla_dining_scraper

./: .gitignore  Cargo.toml
src/: date.rs  download.rs  lib.rs  main.rs  model.rs  parse.rs  request.rs
src/model/: display.rs  item.rs  menu.rs  mod.rs  storage.rs
src/parse/: mod.rs  parse_item.rs  parse_menu.rs
src/request/: item.rs  item_request.rs  menu.rs  menu_request.rs  mod.rs
