[package]
name = "ucla_dining_scraper"
version = "0.1.0"
authors = ["QINGWEI LAN <qingweilan@gmail.com>"]
edition = "2018"

[dependencies]
reqwest = "0.10.7"
scraper = "0.12.0"
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.19"
strum_macros = "0.19"
itertools = "0.9.0"
chrono = "0.4"
clap = "2.33.3"
url = "2.2.2"
async-trait = "0.1.51"

[lib]
name = "ucla_dining_scraper"
path = "src/lib.rs"
test = true
